# durable-mcp-python

./: .gitignore  .mypy.ini  .pytest.ini  .rbtrc  CLAUDE.md  PUBLISH.md  README.md  RELEASE.md  flake.nix  main.py  pyproject.toml
docs/: AUTH_ARCHITECTURE.md  OAUTH_TUTORIAL_DELEGATED.md  OAUTH_TUTORIAL_SERVICE.md
examples/: README.md  run.py
examples/audit/: README.md  audit.py  client.py  example.py
examples/define/: README.md  client.py  example.py
examples/document/: README.md  client.py  example.py
examples/processing/: README.md  client.py  example.py
examples/steps/: README.md  client.py  example.py
reboot/: event_store.py  mcp.py
reboot/inspect/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
reboot/inspect/src/: App.tsx  Mermaid.tsx  main.tsx
reboot/mcp/: client.py  event_store.py  patch.py  server.py  settings.py
store/web/: package-lock.json  package.json
tests/: client.py  test.py  test_at_least_once.py  test_at_most_once.py  test_at_most_once_simple.py  test_auth_basic.py  test_auth_context.py  test_auth_end_to_end.py  test_auth_integration.py  test_auth_per_tool.py  test_elicitation_create.py  test_is_vscode_sse_blocking.py  test_notifications_message.py  test_notifications_progress.py  test_notifications_prompts_list_changed.py  test_notifications_resources_list_changed.py  test_notifications_resources_list_changed_after_reconnect.py  test_notifications_tools_list_changed.py  test_prompt_context.py  test_prompts_list_get.py  test_resource_context.py  test_resources_context.py  test_resources_list_get.py  test_resources_templates_list_get.py  test_resume_with_notifications_message.py  test_resume_with_notifications_progress.py  test_template_reading.py  test_tools_list.py  test_tools_list_call.py
(+15 files in other folders)
