[project]
name = "durable-mcp"
version = "0.2.0"
description = "Durable Model Context Protocol (MCP) helpers for building resumable MCP servers on top of Reboot durable workflows."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Reboot", email = "team@reboot.dev" }
]
keywords = ["mcp", "model-context-protocol", "durable", "workflows", "reboot"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.12.11"
dependencies = [
    "reboot==0.37.1",
    "mcp==1.13.1",
]

[project.optional-dependencies]
dev = [
    "mypy==1.2.0",
    "pytest==8.4.1",
    "types-protobuf>=4.24.0.20240129",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/reboot-dev/mcp-python"
Repository = "https://github.com/reboot-dev/mcp-python"
Issues = "https://github.com/reboot-dev/mcp-python/issues"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
exclude = [
    "tests",
    "*.pyc",
    "__pycache__",
    ".venv*",
    "BUILD.bazel",
    ".devcontainer",
    ".python-version",
    "Dockerfile",
    "uv.lock",
    ".rbtrc",
    ".gitignore",
    ".mypy.ini",
    ".pytest.ini"
]
only-include = ["reboot", "api"]

[tool.hatch.build.sources]
"api/rbt" = "rbt"
"api/google" = "google"

[tool.mypy]
python_version = "3.12"
strict = false
